Adding MapStruct tool and create UserMapperMapStruct interface to train mapping via MapStruct. This interface does the same as UserMapper class.